<resources>
    <string name="app_name">IntelliFlow</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="welcome">Welcome</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="forgot_password1" >Forgot Password ?</string>
    <string name="forgot_password">Forgot Password </string>
    <string name="biometric">Biometric</string>
    <string-array name="languages">
        <item>Select</item>
        <item>English</item>
        <item>Arabic</item>
    </string-array>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="name">Intelliflow Developer</string>
    <string name="product_manager">Product Manager</string>
    <!--    <string name="menu_home">Home</string>-->
    <string name="menu_gallery">Gallery</string>
    <string name="notification_settings">Notifications Settings</string>
    <string name="help_center">Help Center</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedbacks</string>
    <string name="legal">Legal</string>
    <string name="logout">Log out</string>
    <string name="phone">Phone</string>
    <string name="phone_number">1234567890</string>
    <string name="email">Email</string>
    <string name="emailid">info@intelliflow.io</string>
    <string name="search">Search</string>

    <string name="yourapps">Your Application</string>
    <string name="appcount">10 Apps</string>

    <string name="appversion">App Version</string>

    <string name="sort">Sort</string>

    <string name="password">Password</string>

    <string name="login">Login</string>

    <string name="rememberme">Remember me</string>

    <string name="reset_password">Reset Password</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="terms_use">Terms Of Use</string>
    <string name="privacy_policy">"Privacy Policy"</string>

    <string name="notify_me">Notify Me</string>

    <string name="hey_payslip">Hey! Payslip for the month APRIL  has been uploaded. Check Now</string>

    <string name="recent_actions">Recent Actions</string>

    <string name="leave_application">Leave Application</string>
    <string name="appllied_for">Applied For Casual Leave</string>
    <string name="time">20-04-2022, 5:00 pm</string>
    <string name="action_Person_name">Jaxcon schilfer</string>
    <string name="action_status">"Approved"</string>

    <string-array name="miniapps_array">
        <item>Mini Apps</item>
        <item>Leave Application</item>
        <item>Bank Loan App</item>
        <item>Medical History</item>
    </string-array>


    <string name="hello_world">Hello world!</string>
    <string name="hint_sign">Get Signature</string>
    <string name="dialog_title">SIGN HERE</string>
    <string name="hint_cancel">Cancel</string>
    <string name="hint_clear">Clear</string>
    <string name="hint_save">Save</string>

    <style name="dynamicRatingBar" parent="@android:style/Widget.RatingBar">
        <item name="android:progressDrawable">@drawable/ratingstars</item>
        <item name="android:minHeight">10dip</item>
        <item name="android:maxHeight">15dip</item>
        <item name="android:minWidth">20dp</item>
        <item name="android:maxWidth">20dp</item>
    </style>

<!--    <string name="login1">تسجيل الدخول</string>-->

<!--    <string name="password1">كلمة المرور</string>-->

<!--    <string name="title_activity_login1">LoginActivity</string>-->

<!--    <string name="prompt_email1">البريد الإلكتروني</string>-->

<!--    <string name="prompt_password1">Password</string>-->

<!--    <string name="action_sign_in1">Sign in or register</string>-->

<!--    <string name="action_sign_in_short1">Sign in</string>-->

<!--    <string name="invalid_username1">Not a valid username</string>-->

<!--    <string name="invalid_password1">Password must be >5 characters</string>-->
<!--    <string name="login_failed1">"Login failed"</string>-->
<!--    <string name="splash_screen1">"Splash Screen"</string>-->
<!--    <string name="forgot_password1">هل نسيت كلمة السر</string>-->
<!--    <string name="biometric1">بصمات</string>-->
<!--    <string name="rememberme1">تذكرنى</string>-->

<!--    <string-array name="languages1">-->
<!--        <item>Select</item>-->
<!--        <item>إنجليزي</item>-->
<!--        <item>عربي</item>-->
<!--    </string-array>-->

<!--    <string name="email1">البريد الإلكتروني</string>-->






</resources>