<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layoutDirection="ltr"
        >
    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layoutDirection="ltr"
        >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/appBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:text="@string/leave_application"
                />
        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginTop="21dp"
        android:weightSum="2"

        >

        <ImageView
            android:id="@+id/recent_image"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:src="@drawable/recentactions_menu"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1.9"
            >

            <TextView
                android:id="@+id/your_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="0sp"
                android:text="@string/recent_actions"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/your_notification"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="8sp"
                android:text="Total 4 New"
                android:textSize="10sp" />
        </LinearLayout>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:textSize="10sp"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/ic_sort"
            android:id="@+id/sortText"
            android:text="@string/sort"
            android:textColor="@color/black" />

    </LinearLayout>


<!--        <fragment-->
<!--            android:id="@+id/navigation"-->
<!--            android:layout_width="240dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_gravity="right"-->
<!--            />-->

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layoutDirection="rtl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"

            android:fitsSystemWindows="true"
          app:menu="@menu/menu_main"
         />
    </LinearLayout>
    </androidx.drawerlayout.widget.DrawerLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/action_recyclerView"
        />
    </LinearLayout>
</ScrollView>