<?xml version="1.0" encoding="utf-8"?>
    <androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layoutDirection="ltr"
        >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"

            android:background="@color/colorPrimary" >
            <TextView
                android:id="@+id/tv_recent_action_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:text="@string/leave_application"
                />
        </com.google.android.material.appbar.MaterialToolbar>
<!--<LinearLayout-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:background="@color/white"-->
<!--    >-->
<!--        -->



<!--</LinearLayout>-->
    </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white"
            android:weightSum="2"

            >

            <ImageView
                android:id="@+id/recent_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"

                android:layout_marginTop="31dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/recentactions_menu" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="24dp"
                android:layout_marginTop="21dp"
                android:layout_weight="1.9"
                >

                <TextView
                    android:id="@+id/your_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="0sp"
                    android:text="@string/recent_actions"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/your_notification"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="8sp"
                    android:text="Total 4 New"
                    android:textSize="10sp" />
            </LinearLayout>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:layout_marginTop="21dp"
                android:layout_marginRight="30dp"
                android:textSize="10sp"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/ic_sort"
                android:id="@+id/sortText"
                android:text="@string/sort"
                android:textColor="@color/black" />

        </LinearLayout>

<!--        <ImageView-->
<!--            android:id="@+id/recent_image1"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="24dp"-->
<!--            android:layout_marginTop="31dp"-->
<!--            android:layout_marginRight="10dp"-->
<!--            android:src="@drawable/recentactions_menu" />-->

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recentActionProgress"
            android:visibility="invisible"
            android:clickable="false"
            android:minHeight="100dp"
            android:minWidth="100dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/action_recyclerView"
            />


    </LinearLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:itemTextAppearance="@style/Style_TextView"
        app:itemTextColor="@color/colorPrimary"

        app:menu="@menu/menu_main"
        />


    </androidx.drawerlayout.widget.DrawerLayout>

